@@ -1,3 +1,9 @@
+2015-07-11  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c: show_security_module_context_linux():
+	  Don't free @mode returned by aa_gettaskcon(2) since it forms
+	  part of the allocation returned in @context.
+
 2015-07-08  James Hunt  <james.hunt@ubuntu.com>
 
 	* src/procenv.c:
